--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <footer class="footer">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Mustafa Yatağan</a>.
+      Coded by <a href="https://github.com/mstytn">Mustafa Yatağan</a>.
     </div>
   </footer> 
 </body>
